@@ -3,6 +3,9 @@ update-manager (1:0.93.2) unstable; urgency=low
   * DistUpgrade/DistUpgradeCache.py:
     - work around problem with packages with no priority
       (LP: #253255)
+  * DistUpgrade/DistUpgradeViewGtk.py:
+    - detect ctrl-c presses in the terminal and warn the 
+      user that it will kill the upgrade (LP: #90866)
 
  --
 
